<resources>
    <string name="app_name">ATS</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="start_time">00:00:00</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>
    <string name="alarm">Alarm</string>
    <string name="set_time">Set time</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
</resources>